[gd_scene load_steps=10 format=3 uid="uid://c3lix03msx34i"]

[ext_resource type="Texture2D" uid="uid://2j71wquqj8q5" path="res://art/survivalgame-appletree.png" id="1_lg8rc"]
[ext_resource type="Script" path="res://scripts/apple_tree.gd" id="1_q7ysv"]
[ext_resource type="Texture2D" uid="uid://cnm7s1hxy1gb2" path="res://art/Tree-0002.png" id="3_jmfq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_msttt"]
atlas = ExtResource("1_lg8rc")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q24v"]
atlas = ExtResource("3_jmfq0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rx5g"]
atlas = ExtResource("1_lg8rc")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gt7r"]
atlas = ExtResource("3_jmfq0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ec6it"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msttt")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q24v")
}],
"loop": true,
"name": &"coins",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rx5g")
}],
"loop": true,
"name": &"no_apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gt7r")
}],
"loop": true,
"name": &"no_coins",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7q4d3"]
radius = 47.0106

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_q7ysv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ec6it")
animation = &"no_coins"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_7q4d3")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
